MET-5253_MET_5295 add feature to get record from any step