@@ -1,15 +1,5 @@
 package eu.europeana.metis.sandbox.service.record;
 
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.Mockito.clearInvocations;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.reset;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 import eu.europeana.metis.sandbox.common.Status;
 import eu.europeana.metis.sandbox.common.Step;
 import eu.europeana.metis.sandbox.common.exception.NoRecordFoundException;
@@ -24,135 +14,170 @@ import eu.europeana.metis.sandbox.entity.RecordLogEntity;
 import eu.europeana.metis.sandbox.repository.RecordErrorLogRepository;
 import eu.europeana.metis.sandbox.repository.RecordLogRepository;
 import eu.europeana.metis.sandbox.repository.RecordRepository;
-import java.util.Collections;
-import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Collections;
+import java.util.Set;
+import java.util.stream.Stream;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.Mockito.*;
+
 @ExtendWith(MockitoExtension.class)
 class RecordLogServiceImplTest {
 
-  @Mock
-  private RecordLogRepository recordLogRepository;
+    @Mock
+    RecordErrorLogRepository errorLogRepository;
+    @Mock
+    RecordRepository recordRepository;
+    @Mock
+    private RecordLogRepository recordLogRepository;
+    @InjectMocks
+    private RecordLogServiceImpl service;
 
-  @Mock
-  RecordErrorLogRepository errorLogRepository;
+    private static Stream<Arguments> steps() {
+        return Stream.of(
+                arguments(null, Set.of(Step.HARVEST_ZIP, Step.HARVEST_OAI_PMH)),
+                arguments("", Set.of(Step.HARVEST_ZIP, Step.HARVEST_OAI_PMH)),
+                arguments("HARVEST", Set.of(Step.HARVEST_ZIP, Step.HARVEST_OAI_PMH)),
+                arguments("TRANSFORM_TO_EDM_EXTERNAL", Set.of(Step.TRANSFORM_TO_EDM_EXTERNAL)),
+                arguments("VALIDATE_EXTERNAL", Set.of(Step.VALIDATE_EXTERNAL)),
+                arguments("TRANSFORM", Set.of(Step.TRANSFORM)),
+                arguments("VALIDATE_INTERNAL", Set.of(Step.VALIDATE_INTERNAL)),
+                arguments("NORMALIZE", Set.of(Step.NORMALIZE)),
+                arguments("ENRICH", Set.of(Step.ENRICH)),
+                arguments("MEDIA_PROCESS", Set.of(Step.MEDIA_PROCESS)),
+                arguments("PUBLISH", Set.of(Step.PUBLISH)),
+                arguments("CLOSE", Set.of(Step.CLOSE)),
+                arguments("NON_SENSE", Set.of())
+        );
+    }
 
-  @Mock
-  RecordRepository recordRepository;
+    @BeforeEach
+    void prepare() {
+        reset(errorLogRepository);
+        reset(recordLogRepository);
+    }
 
-  @InjectMocks
-  private RecordLogServiceImpl service;
+    @Test
+    void logRecord_expectSuccess() {
+        var record = Record.builder().recordId(1L).content("".getBytes()).datasetId("1")
+                .language(Language.IT).country(Country.ITALY).datasetName("").build();
+        var recordError = new RecordError("message", "stack");
 
-  @BeforeEach
-  void prepare() {
-    reset(errorLogRepository);
-    reset(recordLogRepository);
-  }
+        var event = new RecordProcessEvent(new RecordInfo(record), Step.HARVEST_ZIP, Status.SUCCESS);
 
-  @Test
-  void logRecord_expectSuccess() {
-    var record = Record.builder().recordId(1L).content("".getBytes()).datasetId("1")
-        .language(Language.IT).country(Country.ITALY).datasetName("").build();
-    var recordError = new RecordError("message", "stack");
+        service.logRecordEvent(event);
 
-    var event = new RecordProcessEvent(new RecordInfo(record),  Step.HARVEST_ZIP, Status.SUCCESS);
+        verify(recordLogRepository).save(any(RecordLogEntity.class));
+        verify(errorLogRepository).saveAll(anyList());
+    }
 
-    service.logRecordEvent(event);
+    @Test
+    void logRecord_nullRecord_expectFail() {
+        assertThrows(NullPointerException.class, () -> service.logRecordEvent(null));
+    }
 
-    verify(recordLogRepository).save(any(RecordLogEntity.class));
-    verify(errorLogRepository).saveAll(anyList());
-  }
+    @Test
+    void logRecord_unableToSaveRecord_expectFail() {
+        var record = Record.builder().recordId(1L).content("".getBytes()).datasetId("1")
+                .language(Language.IT).country(Country.ITALY).datasetName("").build();
 
-  @Test
-  void logRecord_nullRecord_expectFail() {
-    assertThrows(NullPointerException.class, () -> service.logRecordEvent(null));
-  }
+        var event = new RecordProcessEvent(new RecordInfo(record), Step.HARVEST_ZIP, Status.SUCCESS);
 
-  @Test
-  void logRecord_unableToSaveRecord_expectFail() {
-    var record = Record.builder().recordId(1L).content("".getBytes()).datasetId("1")
-        .language(Language.IT).country(Country.ITALY).datasetName("").build();
+        when(recordLogRepository.save(any(RecordLogEntity.class)))
+                .thenThrow(new RuntimeException("Exception saving"));
 
-    var event = new RecordProcessEvent(new RecordInfo(record),  Step.HARVEST_ZIP, Status.SUCCESS);
+        assertThrows(ServiceException.class, () -> service.logRecordEvent(event));
+    }
 
-    when(recordLogRepository.save(any(RecordLogEntity.class)))
-        .thenThrow(new RuntimeException("Exception saving"));
+    @Test
+    void logRecord_unableToSaveRecordErrors_expectFail() {
+        var record = Record.builder().recordId(1L).content("".getBytes()).datasetId("1")
+                .language(Language.IT).country(Country.ITALY).datasetName("").build();
 
-    assertThrows(ServiceException.class, () -> service.logRecordEvent(event));
-  }
+        var event = new RecordProcessEvent(new RecordInfo(record), Step.HARVEST_ZIP, Status.SUCCESS);
 
-  @Test
-  void logRecord_unableToSaveRecordErrors_expectFail() {
-    var record = Record.builder().recordId(1L).content("".getBytes()).datasetId("1")
-        .language(Language.IT).country(Country.ITALY).datasetName("").build();
+        when(errorLogRepository.saveAll(anyList()))
+                .thenThrow(new RuntimeException("Exception saving"));
 
-    var event = new RecordProcessEvent(new RecordInfo(record), Step.HARVEST_ZIP, Status.SUCCESS);
+        assertThrows(ServiceException.class, () -> service.logRecordEvent(event));
+    }
 
-    when(errorLogRepository.saveAll(anyList()))
-        .thenThrow(new RuntimeException("Exception saving"));
+    @Test
+    void remove_expectSuccess() {
+        service.remove("1");
+        verify(errorLogRepository).deleteByRecordIdDatasetId("1");
+        verify(recordLogRepository).deleteByRecordIdDatasetId("1");
+    }
 
-    assertThrows(ServiceException.class, () -> service.logRecordEvent(event));
-  }
+    @Test
+    void remove_errorOnDelete_expectFail() {
+        doThrow(new ServiceException("Failed", new Exception())).when(recordLogRepository)
+                .deleteByRecordIdDatasetId("1");
+        assertThrows(ServiceException.class, () -> service.remove("1"));
+    }
 
-  @Test
-  void remove_expectSuccess() {
-    service.remove("1");
-    verify(errorLogRepository).deleteByRecordIdDatasetId("1");
-    verify(recordLogRepository).deleteByRecordIdDatasetId("1");
-  }
+    @Test
+    void remove_nullInput_expectFail() {
+        assertThrows(NullPointerException.class, () -> service.remove(null));
+    }
 
-  @Test
-  void remove_errorOnDelete_expectFail() {
-    doThrow(new ServiceException("Failed", new Exception())).when(recordLogRepository)
-        .deleteByRecordIdDatasetId("1");
-    assertThrows(ServiceException.class, () -> service.remove("1"));
-  }
+    @ParameterizedTest
+    @MethodSource("steps")
+    void getProviderRecordStringByStep_expectSuccess(String stepName, Set<Step> expectedSteps) throws Exception {
+        final RecordLogEntity recordLogEntity = new RecordLogEntity();
+        recordLogEntity.setContent("content"+service.getSetFromStep(stepName));
+        when(recordLogRepository.findRecordLogByRecordIdDatasetIdAndStepIn("recordId", "datasetId",
+                service.getSetFromStep(stepName))).thenReturn(Set.of(recordLogEntity));
+        final String providerRecord = service.getProviderRecordString("recordId", "datasetId", stepName);
+        assertNotNull(providerRecord);
+        assertEquals("content"+expectedSteps.toString(), providerRecord);
+    }
 
-  @Test
-  void remove_nullInput_expectFail() {
-    assertThrows(NullPointerException.class, () -> service.remove(null));
-  }
+    @ParameterizedTest
+    @MethodSource("steps")
+    void getSteps_expectSuccess(String stepName, Set<Step> expectedSteps) {
+        assertEquals(expectedSteps, service.getSetFromStep(stepName));
+    }
 
-  @Test
-  void getProviderRecordString_expectSuccess() throws Exception {
-    final RecordLogEntity recordLogEntity = new RecordLogEntity();
-    recordLogEntity.setContent("content");
-    when(recordLogRepository.findRecordLogByRecordIdDatasetIdAndStepIn("recordId", "datasetId",
-        Set.of(Step.HARVEST_OAI_PMH, Step.HARVEST_ZIP))).thenReturn(Set.of(recordLogEntity));
-    assertNotNull(service.getProviderRecordString("recordId", "datasetId"));
-  }
+    @Test
+    void getProviderRecordString_expectFail() {
+        //Case null entity
+        when(recordLogRepository.findRecordLogByRecordIdDatasetIdAndStepIn("recordId", "datasetId",
+                Set.of(Step.HARVEST_OAI_PMH, Step.HARVEST_ZIP))).thenReturn(Collections.emptySet());
+        assertThrows(NoRecordFoundException.class,
+                () -> service.getProviderRecordString("recordId", "datasetId", null));
 
-  @Test
-  void getProviderRecordString_expectFail() {
-    //Case null entity
-    when(recordLogRepository.findRecordLogByRecordIdDatasetIdAndStepIn("recordId", "datasetId",
-        Set.of(Step.HARVEST_OAI_PMH, Step.HARVEST_ZIP))).thenReturn(Collections.emptySet());
-    assertThrows(NoRecordFoundException.class,
-        () -> service.getProviderRecordString("recordId", "datasetId"));
+        //Case null content
+        when(recordLogRepository.findRecordLogByRecordIdDatasetIdAndStepIn("recordId", "datasetId",
+                Set.of(Step.HARVEST_OAI_PMH, Step.HARVEST_ZIP))).thenReturn(Set.of(new RecordLogEntity()));
+        assertThrows(NoRecordFoundException.class,
+                () -> service.getProviderRecordString("recordId", "datasetId", null));
+    }
 
-    //Case null content
-    when(recordLogRepository.findRecordLogByRecordIdDatasetIdAndStepIn("recordId", "datasetId",
-        Set.of(Step.HARVEST_OAI_PMH, Step.HARVEST_ZIP))).thenReturn(Set.of(new RecordLogEntity()));
-    assertThrows(NoRecordFoundException.class,
-        () -> service.getProviderRecordString("recordId", "datasetId"));
-  }
+    @Test
+    void getRecordLogEntity() {
+        service.getRecordLogEntity("recordId", "datasetId", Step.MEDIA_PROCESS);
+        verify(recordLogRepository).findRecordLogByRecordIdDatasetIdAndStep("recordId", "datasetId",
+                Step.MEDIA_PROCESS);
+        clearInvocations(recordLogRepository);
 
-  @Test
-  void getRecordLogEntity() {
-    service.getRecordLogEntity("recordId", "datasetId", Step.MEDIA_PROCESS);
-    verify(recordLogRepository).findRecordLogByRecordIdDatasetIdAndStep("recordId", "datasetId",
-        Step.MEDIA_PROCESS);
-    clearInvocations(recordLogRepository);
-
-    //Case PROVIDER_ID
-    service.getRecordLogEntity("recordId", "datasetId", Step.MEDIA_PROCESS);
-    verify(recordLogRepository).findRecordLogByRecordIdDatasetIdAndStep("recordId", "datasetId",
-        Step.MEDIA_PROCESS);
-  }
+        //Case PROVIDER_ID
+        service.getRecordLogEntity("recordId", "datasetId", Step.MEDIA_PROCESS);
+        verify(recordLogRepository).findRecordLogByRecordIdDatasetIdAndStep("recordId", "datasetId",
+                Step.MEDIA_PROCESS);
+    }
 
 }
